[package]
name = "safe_fs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.51"
log = "0.4.6"
time = "0.1"
env_logger = "0.6.0"
crdt_tree = "0.0.2"
rand = "0.7.3"
