[package]
name = "sn_fs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A FUSE filesystem implemented atop crdt_tree"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_fs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.51"
log = "0.4.11"
time = "0.1"
env_logger = "0.6.0"
crdt_tree = "0.0.2"
rand = "0.7.3"
rle_vec = "0.4"
openat = "0.1.19"
