[package]
name = "sn_fs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A FUSE filesystem implemented atop crdt_tree"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_fs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.86"
log = "0.4.14"
time = "0.1.44"
env_logger = "0.8.2"
crdt_tree = "0.0.11"
rand = "0.8.3"
openat = "0.1.19"
